[gd_scene load_steps=16 format=3 uid="uid://dxdciixxpiwd8"]

[ext_resource type="Script" path="res://assets/megaman/megaman.gd" id="1_afrgl"]
[ext_resource type="SpriteFrames" uid="uid://b8f6rp22okegb" path="res://sprites/megaman.tres" id="2_b87kq"]
[ext_resource type="Script" path="res://assets/megaman/states/state_manager.gd" id="3_i7aho"]
[ext_resource type="Script" path="res://assets/megaman/states/idle.gd" id="4_dtmg8"]
[ext_resource type="Script" path="res://assets/megaman/states/step.gd" id="5_c1id8"]
[ext_resource type="Script" path="res://assets/megaman/states/walk.gd" id="5_njy5f"]
[ext_resource type="Script" path="res://assets/megaman/states/jump.gd" id="5_sk46j"]
[ext_resource type="Script" path="res://assets/megaman/states/fall.gd" id="7_i5j3g"]
[ext_resource type="Script" path="res://assets/megaman/states/slide.gd" id="9_his4w"]
[ext_resource type="Script" path="res://assets/megaman/states/damaged.gd" id="10_q874g"]
[ext_resource type="Script" path="res://assets/megaman/states/dead.gd" id="11_wc211"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mn401"]
size = Vector2(12, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mw5wp"]
size = Vector2(27.5, 19.5)

[sub_resource type="GDScript" id="GDScript_htodi"]
script/source = "extends Idle

@onready var animated_sprite_2d: AnimatedSprite2D = $\"../../AnimatedSprite2D\"

@export var time_to_return_to_idle:float = 0.5

var _offset_animation:float = 2.5
var _time_since_shot:float = 0.5

func enter() -> void:
	super()
	
	#the animation sprite here is 2.5px offset. We need to move it to fit and bring back when out of this state.
	animated_sprite_2d.position.x = _offset_animation * player.direction
	
	# When debugging, be mindful that we called super() so we'll get two prints
	#print(\"\\tentered Idle Shoot at \" + Time.get_time_string_from_system())
	
	# Instantiate a bullet
	#shoot(idle_shoot_muzzle)
	
	# Start timer to return to idle
	_time_since_shot = time_to_return_to_idle
	
	# TODO: play a sound
	

func physics_process(_delta: float) -> int:
	super(_delta)
	
	_time_since_shot -= _delta
	
	if Input.is_action_just_pressed(\"shoot\") and _time_since_shot < time_to_return_to_idle - _delta:
		_time_since_shot = time_to_return_to_idle
	
	if _time_since_shot <= 0:
		return State.Idle
	
	return State.Null
	
func exit() -> void:
	# Re do the offset
	animated_sprite_2d.position.x = 0
	#print(\"On Exit position x is %f\" % animated_sprite_2d.position.x)
"

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mbywp"]
particle_flag_disable_z = true
gravity = Vector3(0, 98, 0)

[node name="player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_afrgl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = ExtResource("2_b87kq")
animation = &"dead"
flip_h = true

[node name="StandingCollider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_mn401")

[node name="SlidingCollider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -11.25)
shape = SubResource("RectangleShape2D_mw5wp")
disabled = true

[node name="StateManager" type="Node" parent="."]
script = ExtResource("3_i7aho")

[node name="Idle" type="Node" parent="StateManager"]
script = ExtResource("4_dtmg8")
animation_name = "idle"

[node name="IdleShootMuzzle" type="Node2D" parent="StateManager/Idle"]
position = Vector2(17, -13)

[node name="LowerCannonIdle" type="Timer" parent="StateManager/Idle"]
wait_time = 0.5
one_shot = true

[node name="Step" type="Node" parent="StateManager"]
script = ExtResource("5_c1id8")
animation_name = "step"

[node name="Walk" type="Node" parent="StateManager"]
script = ExtResource("5_njy5f")
walk_shoot_animation = "walk_shoot"
animation_name = "walk"

[node name="LowerCannon" type="Timer" parent="StateManager/Walk"]
one_shot = true

[node name="WalkShootMuzzle" type="Node2D" parent="StateManager/Walk"]
position = Vector2(17, -12)

[node name="Jump" type="Node" parent="StateManager"]
script = ExtResource("5_sk46j")
animation_name = "jump"

[node name="JumpShootMuzzle" type="Node2D" parent="StateManager/Jump"]
position = Vector2(13, -17)

[node name="Fall" type="Node" parent="StateManager"]
script = ExtResource("7_i5j3g")
animation_name = "fall"

[node name="Slide" type="Node" parent="StateManager"]
script = ExtResource("9_his4w")
animation_name = "slide"

[node name="SlideTimer" type="Timer" parent="StateManager/Slide"]
wait_time = 0.43
one_shot = true

[node name="IdleShoot" type="Node" parent="StateManager"]
script = SubResource("GDScript_htodi")

[node name="Damaged" type="Node" parent="StateManager"]
script = ExtResource("10_q874g")
animation_name = "damaged"

[node name="InvulTimer" type="Timer" parent="StateManager/Damaged"]
wait_time = 0.5
one_shot = true

[node name="DamageParticles" type="GPUParticles2D" parent="StateManager/Damaged"]
position = Vector2(0, -28)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_mbywp")
lifetime = 2.0
preprocess = 0.5
randomness = 0.44

[node name="Dead" type="Node" parent="StateManager"]
script = ExtResource("11_wc211")
animation_name = "dead"

[connection signal="animation_finished" from="AnimatedSprite2D" to="StateManager/Step" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="StateManager/Idle/LowerCannonIdle" to="StateManager/Idle" method="_on_lower_cannon_idle_timeout"]
[connection signal="timeout" from="StateManager/Walk/LowerCannon" to="StateManager/Walk" method="_on_lower_cannon_timeout"]
[connection signal="timeout" from="StateManager/Slide/SlideTimer" to="StateManager/Slide" method="_on_slide_timer_timeout"]
[connection signal="timeout" from="StateManager/Damaged/InvulTimer" to="StateManager/Damaged" method="_on_invul_timer_timeout"]
